<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Home">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B7EF95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="174dp"
        android:layout_height="146dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="119dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

   <ImageView
        android:id="@+id/imageView4"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/pro_05" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/pro_04" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/pro_03" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/pro_02" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_rep"
        app:srcCompat="@drawable/pro_01" />


    <ImageView
        android:id="@+id/my_rep"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/pro_06" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="62dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="62dp"
        android:text="@string/age"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="62dp"
        android:text="@string/birth"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />


   <!-- <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/myR"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/change"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/share"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/lang"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/term"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/helps"
                android:textSize="23sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView> -->

</androidx.constraintlayout.widget.ConstraintLayout>